Mobile version done

--- a/miljo/layout.html
+++ b/miljo/layout.html
@@ -11,12 +11,12 @@
 <body>
 
     <!-- First section -->
-    <section>
+    <section id="first">
         <!-- Container 1 -->
         <div>
             <h1 class="bordershadow">PARKER</h1>
             <img src="images/image.jpg" class="bordershadow" alt="">
-            <div>
+            <div class="secOneSmallBoxes">
                 <p class="bordershadow">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus voluptatum nihil ab,
                     necessitatibus nisi deserunt corporis maiores repellat. Officia illo nulla repudiandae, eaque
@@ -60,13 +60,25 @@
                     incidunt.
                 </p>
             </div>
+
+            <div class="secOneSmallBoxes">
+                <p class="bordershadow">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus voluptatum nihil ab,
+                    necessitatibus nisi deserunt corporis maiores repellat. Officia illo nulla repudiandae, eaque
+                    accusantium soluta id commodi iste rerum rem, sed unde voluptatibus quia impedit.
+                </p>
+                <p class="bordershadow">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum rem placeat unde illum a dolor odit.
+                    Repellat explicabo sapiente quia aut tempore facilis dolor quis?
+                </p>
+            </div>
         </div>
     </section>
 
     <hr>
 
     <!-- Second section -->
-    <section>
+    <section id="second">
         <!-- Conatiner 1 -->
         <div>
             <h2 class="bordershadow">RUBRIK</h2>
@@ -114,9 +126,9 @@
     <hr>
 
     <!-- Third section -->
-    <section>
+    <section id="third">
         <!-- Container 1 -->
-        <div class="bordershadow">
+        <div class="bordershadow secThreeBigBox1">
             <p>
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit repudiandae id nulla quaerat. Laboriosam
                 officiis consequatur eius ut excepturi esse quaerat consequuntur deserunt. Recusandae explicabo
@@ -137,6 +149,27 @@
         <!-- Container 2 -->
         <div>
             <h2 class="bordershadow">RUBRIK</h2>
+            <div class="bordershadow secThreeBigBox2">
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit repudiandae id nulla quaerat.
+                    Laboriosam
+                    officiis consequatur eius ut excepturi esse quaerat consequuntur deserunt. Recusandae explicabo
+                    doloribus accusamus quas hic architecto nemo blanditiis temporibus magnam. In.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Et amet repudiandae ipsam culpa aperiam,
+                    repellat ea dolorem voluptatum voluptatibus eveniet reprehenderit quasi, magnam eius aut rerum
+                    excepturi
+                    quos facere velit fuga totam mollitia. Dignissimos, dolore!
+                </p>
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam enim, eveniet vero quasi, explicabo,
+                    vitae
+                    est eaque deserunt accusantium sequi ducimus? Veniam deserunt obcaecati natus dolore quasi, harum
+                    labore
+                    ullam blanditiis optio consequuntur, tenetur maxime?
+                </p>
+            </div>
             <img src="images/image.jpg" class="bordershadow" alt="">
         </div>
 
