Aktiviteter desktop & mobile done

--- a/malmo/aktiviteter.html
+++ b/malmo/aktiviteter.html
@@ -4,10 +4,152 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="aktiviteter.css">
+    <title>Aktiviteter</title>
 </head>
 
 <body>
+    <!-- Sec 1 -->
+    <section id="first">
+        <!-- Sec 1 Con 1 -->
+        <div>
+            <h1 class="bordershadow">AKTIVITETER</h1>
+            <h2 class="bordershadow">SKATEBOARD</h2>
+            <p class="bordershadow">
+                Tycker man om att skatea finns det inte många ställen som är bättre än Malmö. Malmö har en stor
+                skatekultur som växer varje dag. Det finns gott om parker, butiker och street spots att besöka.
+                Stapelbäddsparken är ett måste om man är skateboardintresserad. En av Sveriges största och bästa parker.
+                Regnar det kan du ta dig till bryggeriets inomhuspark istället.
+            </p>
+        </div>
+        <!-- Sec 1 Con 2 -->
+        <img src="images/skateboard.jpg" class="bordershadow" alt="Stapelbäddsparken">
+    </section>
+    <hr>
+    <!-- Sec 2 -->
+    <section id="second">
+        <!-- Sec 2 Con 1 -->
+        <h2 class="bordershadow">BOULEBAR</h2>
+        <!-- Sec 2 Con 2 -->
+        <div>
+            <!-- Sec 2 Con 2.1 -->
+            <div>
+                <p class="bordershadow">
+                    Malmös ridhus från 1800-talet har förvandlats till en boulebar. Perfekt för både noviser och proffs.
+                    Välj mellan att spela inomhus eller utomhus. Passa även på att kombinera spelet med franska
+                    delikatesser, exempelvis en brunch, i restaurangen.
+                </p>
+                <div class="bordershadow">
+                    <p><b>Öppettider</b></p>
+                    <ul>
+                        <li>Måndag: 15 - 23</li>
+                        <li>Tisdag: 15 - 23</li>
+                        <li>Onsdag: 15 - 23</li>
+                        <li>Torsdag: 15 - 00</li>
+                        <li>Fredag 15 - 00</li>
+                        <li>Lördag: 10:30 - 00</li>
+                        <li>Söndag: Stängt</li>
+                    </ul>
+                    <p><b>Adress:</b> Drottningtorget 8</p>
+                </div>
+            </div>
+            <!-- Sec 2 Con 2.2 -->
+            <div>
+                <img src="images/boulebar_ute.jpg" class="bordershadow" alt="Boulebar utomhus">
+                <img src="images/boulebar_inne.jpg" class="bordershadow" alt="Boulebar inomhus">
+            </div>
+        </div>
+    </section>
+    <hr>
+    <!-- Sec 3 -->
+    <section id="third">
+        <!-- Sec 3 Con 1 -->
+        <div>
+            <h2 class="bordershadow">UTMANINGARNAS HUS</h2>
+            <p class="bordershadow">
+                På utmaningarnas hus väntar 40 stycken olika utmaningar inom fem olika kategorier. Här inne krävs det
+                samarbete för att kunna slå klockan och eventuella motståndare.
+            </p>
+            <div class="bordershadow">
+                <p><b>Öppettider</b></p>
+                <ul>
+                    <li>Måndag: 08-21</li>
+                    <li>Tisdag: 08-21</li>
+                    <li>Onsdag: 08-21</li>
+                    <li>Torsdag: 08-21</li>
+                    <li>Fredag: 08-21</li>
+                    <li>Lördag: 10-18</li>
+                    <li>Söndag: Stängt</li>
+                </ul>
+                <p><b>Adress:</b> Geijersgatan 8</p>
+            </div>
+        </div>
+        <!-- Sec 3 Con 2 -->
+        <img src="images/skateboard.jpg" class="bordershadow" alt="Utmaningarnas Hus">
+    </section>
+    <hr>
+    <!-- Sec 4 -->
+    <section id="fourth">
+        <!-- Sec 4 Con 1 -->
+        <img src="images/sherlocked.jpg" class="bordershadow" alt="Sherlocked">
+        <!-- Sec 4 Con 2 -->
+        <div>
+            <h2 class="bordershadow">SHERLOCKED</h2>
+            <p class="bordershadow">
+                Tycker man om Sherlock Holmes och escape rooms är ett besök på Sherlocked i Malmö givet. Välj mellan
+                flera olika escape rooms, eller varför inte ta en drink på någon av deras Sherlock Holmes-inspirerade
+                barer.
+            </p>
+            <div class="bordershadow">
+                <p><b>Öppettider</b></p>
+                <ul>
+                    <li>Måndag: 10 - 16</li>
+                    <li>Tisdag: 10 - 16</li>
+                    <li>Onsdag: 10 - 16</li>
+                    <li>Torsdag: 10 - 16</li>
+                    <li>Fredag: 10 - 16</li>
+                    <li>Lördag: 10 - 12</li>
+                    <li>Söndag: Stängt</li>
+                </ul>
+                <p><b>Adress:</b> Östergatan 5</p>
+            </div>
+        </div>
+    </section>
+    <hr>
+    <!-- Sec 5 -->
+    <section id="fifth">
+        <h2 class="bordershadow">ARENA 305</h2>
+        <div>
+            <!-- Sec 5 Con 1 -->
+            <img src="images/arena305.jpg" class="bordershadow" alt="Arena 305">
+            <!-- Sec 5 Con 2 -->
+            <div>
+                <p class="bordershadow">
+                    Är du mellan 15-25 och tycker om musik är Arena 305 något för dig. Här finns det scener, replokaler
+                    och
+                    studior. Det går att arrangera egna evenemang kostnadsfritt, om du t.ex. vill uppträda med ditt
+                    band.
+                    <br>
+                    Behöver man repa eller spela in musik har man tillgång till någon av studiorna eller replokalerna.
+                    Det
+                    finns även personal med spetskunskap på plats om man behöver hjälp.
+                </p>
+                <div class="bordershadow">
+                    <p><b>Öppettider</b></p>
+                    <ul>
+                        <li>Måndag: 15 - 22</li>
+                        <li>Tisdag: 15 - 22</li>
+                        <li>Onsdag: 15 - 22</li>
+                        <li>Torsdag: 15 - 22</li>
+                        <li>Fredag: 15 - 22</li>
+                        <li>Lördag: Stängt</li>
+                        <li>Söndag: 14 - 20</li>
+                    </ul>
+                    <p><b>Adress:</b> Lönngatan 30</p>
+                </div>
+            </div>
+        </div>
+    </section>
 
 </body>
 
