Stränder mobile done

--- a/miljo/strander.html
+++ b/miljo/strander.html
@@ -47,7 +47,14 @@
         <!-- Conatiner 1 -->
         <div>
             <h2 class="bordershadow">RIBERSBORGSSTRANDEN/ RIBBAN</h2>
-            <img src="images/image.jpg" class="bordershadow" alt="Ribersborgsstranden">
+            <div class="bordershadow">
+                <p>
+                    Photo by <a
+                        href="https://unsplash.com/@jchatelain?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Julien
+                        Chatelain</a> on Unsplash
+                </p>
+            </div>
+            <!-- <img src="images/image.jpg" class="bordershadow" alt="Ribersborgsstranden"> -->
         </div>
         <!-- Container 2 -->
         <div>
