--- a/malmo/aktiviteter.html
+++ b/malmo/aktiviteter.html
@@ -85,7 +85,7 @@
             </div>
         </div>
         <!-- Sec 3 Con 2 -->
-        <img src="images/skateboard.jpg" class="bordershadow" alt="Utmaningarnas Hus">
+        <img src="images/utmaningarnas.heic" class="bordershadow" alt="Utmaningarnas Hus">
     </section>
     <hr>
     <!-- Sec 4 -->
