--- a/franannatper/malmoannat.html
+++ b/franannatper/malmoannat.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="mamloannat.css">
-    <title>test grid</title>
+    <title>Malmö från ett annat perspektiv</title>
 </head>
 
 <body>
