--- a/franannatper/malmoannat.html
+++ b/franannatper/malmoannat.html
@@ -9,6 +9,135 @@
 </head>
 
 <body>
+    <header class="pc">
+        <a href="#">MALMÖ BY FOOT</a>
+    </header>
+
+    <nav class="main-nav-pc">
+        <div class="item-container">
+            <a href="#">MAT & DRYCK</a>
+            <nav class="subnav">
+                <a href="#">Restauranger</a>
+                <a href="#">Caféer</a>
+            </nav>
+        </div>
+        <div class="item-container">
+            <a href="#">MILJÖ</a>
+            <nav class="subnav">
+                <a href="#">Parker</a>
+                <a href="#">Stränder</a>
+            </nav>
+        </div>
+        <div class="item-container">
+            <a href="#">KULTUR</a>
+            <nav class="subnav">
+                <a href="#">Sevärdigheter</a>
+                <a href="#">Museer</a>
+            </nav>
+        </div>
+        <div class="item-container">
+            <a href="#">KUL I MALMÖ</a>
+            <nav class="subnav">
+                <a href="#">Hidden Gems</a>
+                <a href="#">Shopping</a>
+                <a href="#">Malmö Perspektiv</a>
+            </nav>
+        </div>
+        <div class="item-container">
+            <a href="#">LOKALT</a>
+            <nav class="subnav">
+                <a href="#">Aktiviteter</a>
+                <a href="#">Nattliv</a>
+            </nav>
+        </div>
+    </nav>
+
+    <header class="tablet">
+        <a href="#">MALMÖ BY FOOT</a>
+    </header>
+
+    <input type="checkbox" id="show-subnav">
+    <label for="show-subnav" id="make-background-gray"></label>
+
+    <div class="hamburger-menu-container">
+        <label for="show-subnav" class="hamburger-menu">
+            <div></div>
+            <div></div>
+            <div></div>
+        </label>
+    </div>
+
+    <nav class="main-nav-tablet" id="tablet-nav">
+        <header class="tablet-nav-header">
+            <a href="#">MALMÖ BY FOOT</a>
+        </header>
+
+        <div id="items-wrapper">
+            <div class="item-container">
+                <a href="#">HEM</a>
+            </div>
+
+            <div class="item-container" id="subnav1">
+                <a href="#subnav1">MAT & DRYCK</a>
+                <nav class="subnav">
+                    <a href="#">Restauranger</a>
+                    <a href="#">Caféer</a>
+                </nav>
+
+                <div class="subnav-disapear">
+                    <a href="#"></a>
+                </div>
+            </div>
+            <div class="item-container" id="subnav2">
+                <a href="#subnav2">MILJÖ</a>
+                <nav class="subnav">
+                    <a href="#">Parker</a>
+                    <a href="#">Stränder</a>
+                </nav>
+
+                <div class="subnav-disapear">
+                    <a href="#"></a>
+                </div>
+            </div>
+            <div class="item-container" id="subnav3">
+                <a href="#subnav3">KULTUR</a>
+                <nav class="subnav">
+                    <a href="#">Sevärdigheter</a>
+                    <a href="#">Museer</a>
+                </nav>
+
+                <div class="subnav-disapear">
+                    <a href="#"></a>
+                </div>
+            </div>
+            <div class="item-container" id="subnav4">
+                <a href="#subnav4">KUL I MALMÖ</a>
+                <nav class="subnav">
+                    <a href="#">Hidden Gems</a>
+                    <a href="#">Shopping</a>
+                    <a href="#">Malmö Perspektiv</a>
+                </nav>
+
+                <div class="subnav-disapear">
+                    <a href="#"></a>
+                </div>
+            </div>
+            <div class="item-container" id="subnav5">
+                <a href="#subnav5">LOKALT</a>
+                <nav class="subnav">
+                    <a href="#">Aktiviteter</a>
+                    <a href="#">Nattliv</a>
+                </nav>
+
+                <div class="subnav-disapear">
+                    <a href="#"></a>
+                </div>
+            </div>
+        </div>
+    </nav>
+
+
+
     <main>
         <!-- Sec 1 -->
         <section id="first">
