--- a/franannatper/malmoannat.html
+++ b/franannatper/malmoannat.html
@@ -145,7 +145,7 @@
             <div>
                 <!-- Sec 1 Con 1.1 -->
                 <div>
-                    <img src="image.jpg" class="bordershadow" alt="">
+                    <img src="images/mångfald.jpg" class="bordershadow" alt="">
                     <!-- Sec 1 Con 1.1.2 -->
                     <div>
                         <h1 class="bordershadow">MALMÖ FRÅN ETT ANNAT PERSPEKTIV</h1>
@@ -184,7 +184,7 @@
         <section id="second" class="flex1">
             <!-- Sec 2 Con 1 -->
             <div>
-                <img src="image.jpg" class="bordershadow" alt="">
+                <img src="images/hållbarhet.jpg" class="bordershadow" alt="">
                 <p class="bordershadow textbox">
                     Miljöprojekt och innovation: De stöder och finansierar projekt och initiativ som främjar innovation
                     inom miljöområdet. Det kan vara allt från att främja förnybar energi till att minska avfall och
@@ -267,7 +267,7 @@
                         och andra projekt för att minska sin koldioxidutsläpp.
                     </p>
                 </div>
-                <img src="image.jpg" class="bordershadow" alt="">
+                <img src="images/innovation1.jpg" class="bordershadow" alt="">
             </div>
         </section>
         <hr>
@@ -275,7 +275,7 @@
         <section id="fourth" class="flex1">
             <!-- Sec 4 Con 1 -->
             <div>
-                <img src="image.jpg" class="bordershadow" alt="">
+                <img src="images/engagemang2.jpg" class="bordershadow" alt="">
             </div>
 
             <!-- Sec 4 Con 2 -->
