Image and navbar

--- a/malmo/aktiviteter.html
+++ b/malmo/aktiviteter.html
@@ -12,7 +12,6 @@
     <header class="pc">
         <a href="#">MALMÖ BY FOOT</a>
     </header>
-
     <nav class="main-nav-pc">
         <div class="item-container">
             <a href="#">MAT & DRYCK</a>
@@ -31,8 +30,8 @@
         <div class="item-container">
             <a href="#">KULTUR</a>
             <nav class="subnav">
-                <a href="#">Sevärdigheter</a>
-                <a href="#">Museer</a>
+                <a href="../sevardigheter/index.html">Sevärheter</a>
+                <a href="../museer/museer.html">Museer</a>
             </nav>
         </div>
         <div class="item-container">
@@ -47,18 +46,15 @@
             <a href="#">LOKALT</a>
             <nav class="subnav">
                 <a href="#">Aktiviteter</a>
-                <a href="#">Nattliv</a>
+                <a href="../nattliv/nattliv.html">Nattliv</a>
             </nav>
         </div>
     </nav>
-
     <header class="tablet">
         <a href="#">MALMÖ BY FOOT</a>
     </header>
-
     <input type="checkbox" id="show-subnav">
     <label for="show-subnav" id="make-background-gray"></label>
-
     <div class="hamburger-menu-container">
         <label for="show-subnav" class="hamburger-menu">
             <div></div>
@@ -66,24 +62,20 @@
             <div></div>
         </label>
     </div>
-
     <nav class="main-nav-tablet" id="tablet-nav">
         <header class="tablet-nav-header">
             <a href="#">MALMÖ BY FOOT</a>
         </header>
-
         <div id="items-wrapper">
             <div class="item-container">
                 <a href="#">HEM</a>
             </div>
-
             <div class="item-container" id="subnav1">
                 <a href="#subnav1">MAT & DRYCK</a>
                 <nav class="subnav">
                     <a href="#">Restauranger</a>
                     <a href="#">Caféer</a>
                 </nav>
-
                 <div class="subnav-disapear">
                     <a href="#"></a>
                 </div>
@@ -94,7 +86,6 @@
                     <a href="#">Parker</a>
                     <a href="#">Stränder</a>
                 </nav>
-
                 <div class="subnav-disapear">
                     <a href="#"></a>
                 </div>
@@ -102,10 +93,9 @@
             <div class="item-container" id="subnav3">
                 <a href="#subnav3">KULTUR</a>
                 <nav class="subnav">
-                    <a href="#">Sevärdigheter</a>
-                    <a href="#">Museer</a>
+                    <a href="../sevardheter/sevardheter.html">Sevärdheter</a>
+                    <a href="../museer/museer.html">Museer</a>
                 </nav>
-
                 <div class="subnav-disapear">
                     <a href="#"></a>
                 </div>
@@ -113,11 +103,9 @@
             <div class="item-container" id="subnav4">
                 <a href="#subnav4">KUL I MALMÖ</a>
                 <nav class="subnav">
-                    <a href="#">Hidden Gems</a>
-                    <a href="#">Shopping</a>
-                    <a href="#">Malmö Perspektiv</a>
+                    <a href="#">Aktiviteter</a>
+                    <a href="../nattliv/nattliv.html">Nattliv</a>
                 </nav>
-
                 <div class="subnav-disapear">
                     <a href="#"></a>
                 </div>
@@ -125,10 +113,10 @@
             <div class="item-container" id="subnav5">
                 <a href="#subnav5">LOKALT</a>
                 <nav class="subnav">
-                    <a href="#">Aktiviteter</a>
-                    <a href="#">Nattliv</a>
+                    <a href="#">Hidden Gems</a>
+                    <a href="#">Shopping</a>
+                    <a href="#">Malmö Perspektiv</a>
                 </nav>
-
                 <div class="subnav-disapear">
                     <a href="#"></a>
                 </div>
@@ -214,7 +202,7 @@
             </div>
         </div>
         <!-- Sec 3 Con 2 -->
-        <img src="images/utmaningarnas.heic" class="bordershadow" alt="Utmaningarnas Hus">
+        <img src="images/utmaningarnas.jpg" class="bordershadow" alt="Utmaningarnas Hus">
     </section>
     <hr>
     <!-- Sec 4 -->
