Images and navbar

--- a/miljo/parker/parker.html
+++ b/miljo/parker/parker.html
@@ -9,12 +9,126 @@
 </head>
 
 <body>
+    <header class="pc">
+        <a href="#">MALMÖ BY FOOT</a>
+    </header>
+    <nav class="main-nav-pc">
+        <div class="item-container">
+            <a href="#">MAT & DRYCK</a>
+            <nav class="subnav">
+                <a href="#">Restauranger</a>
+                <a href="#">Caféer</a>
+            </nav>
+        </div>
+        <div class="item-container">
+            <a href="#">MILJÖ</a>
+            <nav class="subnav">
+                <a href="#">Parker</a>
+                <a href="#">Stränder</a>
+            </nav>
+        </div>
+        <div class="item-container">
+            <a href="#">KULTUR</a>
+            <nav class="subnav">
+                <a href="../sevardigheter/index.html">Sevärheter</a>
+                <a href="../museer/museer.html">Museer</a>
+            </nav>
+        </div>
+        <div class="item-container">
+            <a href="#">KUL I MALMÖ</a>
+            <nav class="subnav">
+                <a href="#">Hidden Gems</a>
+                <a href="#">Shopping</a>
+                <a href="#">Malmö Perspektiv</a>
+            </nav>
+        </div>
+        <div class="item-container">
+            <a href="#">LOKALT</a>
+            <nav class="subnav">
+                <a href="#">Aktiviteter</a>
+                <a href="../nattliv/nattliv.html">Nattliv</a>
+            </nav>
+        </div>
+    </nav>
+    <header class="tablet">
+        <a href="#">MALMÖ BY FOOT</a>
+    </header>
+    <input type="checkbox" id="show-subnav">
+    <label for="show-subnav" id="make-background-gray"></label>
+    <div class="hamburger-menu-container">
+        <label for="show-subnav" class="hamburger-menu">
+            <div></div>
+            <div></div>
+            <div></div>
+        </label>
+    </div>
+    <nav class="main-nav-tablet" id="tablet-nav">
+        <header class="tablet-nav-header">
+            <a href="#">MALMÖ BY FOOT</a>
+        </header>
+        <div id="items-wrapper">
+            <div class="item-container">
+                <a href="#">HEM</a>
+            </div>
+            <div class="item-container" id="subnav1">
+                <a href="#subnav1">MAT & DRYCK</a>
+                <nav class="subnav">
+                    <a href="#">Restauranger</a>
+                    <a href="#">Caféer</a>
+                </nav>
+                <div class="subnav-disapear">
+                    <a href="#"></a>
+                </div>
+            </div>
+            <div class="item-container" id="subnav2">
+                <a href="#subnav2">MILJÖ</a>
+                <nav class="subnav">
+                    <a href="#">Parker</a>
+                    <a href="#">Stränder</a>
+                </nav>
+                <div class="subnav-disapear">
+                    <a href="#"></a>
+                </div>
+            </div>
+            <div class="item-container" id="subnav3">
+                <a href="#subnav3">KULTUR</a>
+                <nav class="subnav">
+                    <a href="../sevardheter/sevardheter.html">Sevärdheter</a>
+                    <a href="../museer/museer.html">Museer</a>
+                </nav>
+                <div class="subnav-disapear">
+                    <a href="#"></a>
+                </div>
+            </div>
+            <div class="item-container" id="subnav4">
+                <a href="#subnav4">KUL I MALMÖ</a>
+                <nav class="subnav">
+                    <a href="#">Aktiviteter</a>
+                    <a href="../nattliv/nattliv.html">Nattliv</a>
+                </nav>
+                <div class="subnav-disapear">
+                    <a href="#"></a>
+                </div>
+            </div>
+            <div class="item-container" id="subnav5">
+                <a href="#subnav5">LOKALT</a>
+                <nav class="subnav">
+                    <a href="#">Hidden Gems</a>
+                    <a href="#">Shopping</a>
+                    <a href="#">Malmö Perspektiv</a>
+                </nav>
+                <div class="subnav-disapear">
+                    <a href="#"></a>
+                </div>
+            </div>
+        </div>
+    </nav>
     <!-- Sec 1 -->
     <section id="first">
         <!-- Con 1 -->
         <div>
             <h1 class="bordershadow">PARKER</h1>
-            <img src="images/image.jpg" class="bordershadow" alt="Pildammsparken">
+            <img src="images/pildamsparken1.jpg" class="bordershadow" alt="Pildammsparken">
         </div>
         <!-- Con 2 -->
         <div>
@@ -72,48 +186,48 @@
                     Eriksson</a> on Unsplash
             </p>
         </div>
-        <!-- <img src="images/image.jpg" class="bordershadow" alt="Kungsparken"> -->
     </section>
     <hr>
     <!-- Sec 3 -->
     <section id="third">
-        <div class="bordershadow textbox">
-            <p>
-                En charmig trädgård intill Malmöhus slott med en mängd blommor och växter. Det är en av de mest
-                uppskattade
-                promenadslingorna i Malmö. Slottsparken har stora skogspartier, utsiktsplatser och en mängd sittplatser.
-            </p>
-            <p>
-                I parken finns det två stora dammar och ett kärr med en anlagd källa som är utformad som en liten
-                japansk
-                trädgård. Under vinterhalvåret blir den lilla dammen stämningsfullt ljussatt i många olika spännande
-                färger.
-            </p>
-            <p>
-                Centralt i parken finns det en stor monumental festplats som avslutas vid stora dammen med statyn
-                Pegasus av
-                konstnären Carl Mille. Hjärtat av parken är den så kallade Lördagsplanen som utnyttjas för samvaro,
-                konserter och olika arrangemang.
-            <p>
-        </div>
+        <h2 class="bordershadow">SLOTTSPARKEN</h2>
         <div>
-            <h2 class="bordershadow">SLOTTSPARKEN</h2>
-            <div>
-                <img src="images/image.jpg" class="bordershadow" alt="Slottsparken">
-                <p class="bordershadow textbox">
-                    I den södra delen av parken finner man Malmös stadsbibliotek samt en av stadens temalekplatser.
-                    Sagolekplatsen bygger på det ljusa och det mörka i en sagas värld. Det har man realiserat genom att
-                    skapa sagovärldar med olika stämningar. Man märker tydligt när man går från den ena delen till den
-                    andra.
+            <div class="bordershadow textbox">
+                <p>
+                    En charmig trädgård intill Malmöhus slott med en mängd blommor och växter. Det är en av de mest
+                    uppskattade
+                    promenadslingorna i Malmö. Slottsparken har stora skogspartier, utsiktsplatser och en mängd
+                    sittplatser.
+                </p>
+                <p>
+                    I parken finns det två stora dammar och ett kärr med en anlagd källa som är utformad som en liten
+                    japansk
+                    trädgård. Under vinterhalvåret blir den lilla dammen stämningsfullt ljussatt i många olika spännande
+                    färger.
+                </p>
+                <p>
+                    Centralt i parken finns det en stor monumental festplats som avslutas vid stora dammen med statyn
+                    Pegasus av
+                    konstnären Carl Mille. Hjärtat av parken är den så kallade Lördagsplanen som utnyttjas för samvaro,
+                    konserter och olika arrangemang.
+                <p>
+            </div>
+            <img src="images/slottsparken1.jpg" class="bordershadow" alt="Slottsparken">
+            <p class="bordershadow textbox">
+                I den södra delen av parken finner man Malmös stadsbibliotek samt en av stadens temalekplatser.
+                Sagolekplatsen bygger på det ljusa och det mörka i en sagas värld. Det har man realiserat genom
+                att
+                skapa sagovärldar med olika stämningar. Man märker tydligt när man går från den ena delen till
+                den
+                andra.
+            </p>
+            <div class="bordershadow">
+                <p class="img">
+                    Photo by <a
+                        href="https://unsplash.com/@sndrx?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Sandra-Beatrice
+                        Molnar</a> on Unsplash
                 </p>
             </div>
-        </div>
-        <div class="bordershadow">
-            <p class="img">
-                Photo by <a
-                    href="https://unsplash.com/@sndrx?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Sandra-Beatrice
-                    Molnar</a> on Unsplash
-            </p>
         </div>
     </section>
     <hr>
@@ -163,12 +277,12 @@
                 </ul>
             </div>
         </div>
-        <img src="images/image.jpg" class="bordershadow" alt="Folkets Park">
+        <img src="images/folketsPark.jpg" class="bordershadow" alt="Folkets Park">
     </section>
     <hr>
     <!-- Sec 5 -->
     <section id="fifth">
-        <img src="images/image.jpg" class="bordershadow" alt="Bulltoftaparken">
+        <img src="images/bulltoftaparken1.jpg" class="bordershadow" alt="Bulltoftaparken">
         <div>
             <h2 class="bordershadow">BULLTOFTAPARKEN</h2>
             <div class="bordershadow textbox">
