--- a/miljo/parker/parker.html
+++ b/miljo/parker/parker.html
@@ -315,6 +315,53 @@
             </div>
         </div>
     </section>
+
+    <footer>
+        <div class="footer-header">
+            <h3>Vårt Team</h3>
+            <p>Team Leads</p>
+        </div>
+        <div class="footer-content">
+            <div class="team">
+                <p>
+                    <b>Projektledare</b> - Elin Sauer
+                    <br><b>Grafisk Design</b> - Olivia Frick
+                    <br><b>Programmering</b> - Ella Ahlstedt
+                    <br><b>Media Production</b> - Boris Ostojic
+                </p>
+            </div>
+            <div class="kodare">
+                <p><b>Programmering:</b></p>
+                <p>
+                    Pontus Karlsson
+                    <br>
+                    Leo Mühl
+                    <br>
+                    Nour Al Hamwi
+                </p>
+            </div>
+            <div class="media">
+                <p><b>Media Production:</b></p>
+                <p>
+                    Nikolina Vasikj
+                    <br>
+                    Hampus Eriksson
+                    <br>
+                    Marua Alkahafadji
+                </p>
+            </div>
+            <div class="grafisk">
+                <p><b>Grafisk Design:</b></p>
+                <p>
+                    Saga Floderus
+                    <br>Alba Girlanger
+                    <br>Ronja Blücher
+                    <br>Derya Coskun
+                    <br>Emmy Henriksson
+                </p>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
