--- a/page2/page2.html
+++ b/page2/page2.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Document</title>
-        <link rel="stylesheet" href="page2.css">
-    </head>
-    <body>
-        
-    </body>
+
+<head>
+    <meta charset="UTF-8">
+    <title>Document</title>
+    <link rel="stylesheet" href="page2.css">
+</head>
+
+<body>
+    <div>hej</div>
+    <h1>här</h1>
+</body>
+
 </html>
